@@ -28,7 +28,7 @@
 </tr>
 <tr>
 	<td>assertElementPresent</td>
-	<td>//button[@type='button' and @onclick='Todoyu.Ext.search.PanelWidget.SearchFilterList.saveCurrentAreaAsNewFilterset();this.blur()']</td>
+	<td>//button[@type='button' and @onclick='Todoyu.Ext.search.PanelWidget.SearchFilterList.saveNewFilterset();this.blur()']</td>
 	<td></td>
 </tr>
 <tr>
