@@ -1,6 +1,6 @@
 <div class="buttons">
 	{Button label="search.panelwidget-searchfilterlist.clearFilterArea" class="clear" onclick="Todoyu.Ext.search.PanelWidget.SearchFilterList.clearFilterArea()"}
-	{Button label="search.panelwidget-searchfilterlist.saveFilterButton" class="save" onclick="Todoyu.Ext.search.PanelWidget.SearchFilterList.saveCurrentAreaAsNewFilterset()"}
+	{Button label="search.panelwidget-searchfilterlist.saveFilterButton" class="save" onclick="Todoyu.Ext.search.PanelWidget.SearchFilterList.saveNewFilterset()"}
 
 	{foreach $exports name data}
 		{if allowed($data.right.ext, $data.right.right)}
